--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.6.1",
     "react-native-indicator": "^1.2.2",
     "react-native-safe-area-context": "^4.3.4",
@@ -34,6 +35,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
